--- a/README
+++ b/README
@@ -3,38 +3,39 @@ Open Source Software Version Tracker
 
 This script gets the latest version of Package from upstream:
 
-$ ossvt 
+$ ossvt  
 name                           ius ver         upstream ver    status
 ===========================================================================
-mysql50                        5.0.92          5.0.92          updated
-mysql51                        5.1.55          5.1.55          updated
-mysql55                        5.5.9           5.5.9           updated
-nginx07                        0.7.68          0.7.68          updated
-php52-eaccelerator             0.9.6.1         0.9.6.1         updated
+mysql50                        5.0.92          5.0.92          up2date
+mysql51                        5.1.56          5.1.56          testing
+mysql55                        5.5.10          5.5.10          testing
+nginx07                        0.7.68          0.7.68          up2date
+php52-eaccelerator             0.9.6.1         0.9.6.1         up2date
 php52-ioncube-loader           3.3.17          4.0.7           outdated
 php52-pear                     1.8.1           1.9.2           outdated
-php52-pecl-apc                 3.1.6           3.1.6           updated
-php52-pecl-imagick             3.0.1           3.0.1           updated
-php52-pecl-memcache            3.0.5           3.0.5           updated
+php52-pecl-apc                 3.1.6           3.1.6           up2date
+php52-pecl-imagick             3.0.1           3.0.1           up2date
+php52-pecl-memcache            3.0.5           3.0.5           up2date
 php52-pecl-xdebug              2.0.5           2.1.0           outdated
-php52-suhosin                  0.9.32.1        0.9.32.1        updated
-php52-xcache                   1.3.0           1.3.0           updated
-php52                          5.2.17          5.2.17          updated
-php53u-eaccelerator            0.9.6.1         0.9.6.1         updated
+php52-suhosin                  0.9.32.1        0.9.32.1        up2date
+php52-xcache                   1.3.0           1.3.0           up2date
+php52                          5.2.17          5.2.17          up2date
+php53u-eaccelerator            0.9.6.1         0.9.6.1         up2date
 php53u-ioncube-loader          3.3.17          4.0.7           outdated
 php53u-pear                    1.8.1           1.9.2           outdated
-php53u-pecl-apc                3.1.6           3.1.6           updated
-php53u-pecl-imagick            3.0.1           3.0.1           updated
-php53u-pecl-memcache           3.0.5           3.0.5           updated
+php53u-pecl-apc                3.1.6           3.1.6           up2date
+php53u-pecl-imagick            3.0.1           3.0.1           up2date
+php53u-pecl-memcache           3.0.5           3.0.5           up2date
 php53u-pecl-xdebug             2.0.5           2.1.0           outdated
-php53u-suhosin                 0.9.32.1        0.9.32.1        updated
-php53u-xcache                  1.3.0           1.3.0           updated
-php53u                         5.3.5           5.3.5           updated
-python31-distribute            0.6.6           0.6.14          outdated
-python31-mod_wsgi              3.3             3.3             updated
+php53u-suhosin                 0.9.32.1        0.9.32.1        up2date
+php53u-xcache                  1.3.0           1.3.0           up2date
+php53u                         5.3.5           5.3.5           up2date
+python31-distribute            0.6.6           0.6.15          outdated
+python31-mod_wsgi              3.3             3.3             up2date
 python31-postgresql            1.0.0           1.0.2           outdated
-python31                       3.1.2           3.1.3           outdated
-rsyslog4                       4.6.5           4.6.5           updated
+python31                       3.1.3           3.1.3           testing
+rsyslog4                       4.6.5           4.6.5           up2date
+
 
 =====
 
